--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v1.0.2 - June 14, 2013
+-Migrate from java.net.URL to apache's HttpClient
+-Add version number to email subject
+-Toasts give a better of idea of what went wrong now that I can get HTTP response codes via HttpClient
+
 v1.0.1 - June 13, 2013
 -Add custom short URL function
 -Add progress bar
